breaks on reference

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div><u><b>Treatment considerations</b></u><sup>1</sup></div>
 
   <div> 
-      <ul  >
+      <ul>
   <li>
     The patient is typically a human
   </li>
@@ -87,12 +87,15 @@ style="display:block; margin-left: auto;margin-right: auto;"   width="25%"
 <br>
             <b>1.</b> Gupta A, Li S. Safety and efficacy of once-daily gastroretentive
             loreminar in patients with postherpetic neuralgia aged 75 years and over.
-            <em>Drugs Aging</em>. 2013;30:999-1008.&nbsp;
+            <em>Drugs Aging</em>.
+            <br> 2013;30:999-1008.
 
  <br>
             <b>2.</b> Harden RN, Kaye AD, Kintanar T, Argoff CE. Evidence-based guidance
             for the management of postherpetic neuralgia in primary care.
-            <em>Postgrad Med</em>. 2013;125:191-202.&nbsp;
+            <em>Postgrad Med</em>. 
+            <br>
+            2013;125:191-202.
 <br>
 <br>
     
